# robot_research_liu

./: .gitignore  11-06.md  20260209.md  PROJECT_IMPROVEMENTS.md  README.md  code.md  llmFformatino.md  tample.txt  阶段总结和展望.md
0902test/: gnd_particle_localizer.cpp  icartmini_demo_lever_less.launch
F-formation/: sks_objectpoint_robot_person.cpp
article/UTF8/: tech-jsample.aux  tech-jsample.dvi  tech-jsample.tex
article/interaction2026_paper_template/__MACOSX/: ._interaction_paper_template
article/interaction2026_paper_template/interaction_paper_template/: readme.txt
data_visual/data/: person_traj.csv  robot_traj.csv
data_visual/data/0905/: person_traj.csv
data_visual/src/: beyesi.py  person_traj.py  plot_robot_person.py  robot_person.py  traj_graph.py
destination_queuque/: nkm_destination_queue_set_dest.cpp  nkm_destination_queue_set_dest.h
hdk-objectpoint-finder-src/: DataTypedef.h  hdk_objectpoint_finder.cpp
launch/: find_objectpoint_by_orientation.conf  hdk_waypoint_finder.conf  icartmini_demo_lever_less.launch  navigation_sbtp_icartmini01.conf  nkm_destination_queue.conf  nkm_follow_tracking.conf  sks_objectpoint_robot_person.conf
liu-memo/: 20241112ラウンジデモ_メモ  25-06-25.md  25-7-24.md  F陣形メモ.txt  install.md  manual.md  memo_shino  objectpointメモ  packagememo.md  sks_objectpoint_robot_person.cpp  車椅子メモ  遠隔操作
liu_formation_track/: CMakeLists.txt  formation_track.launch  package.xml
liu_formation_track/src/: robot_person_following_node.cpp
node_review/scripts/: add_two_ints_client.py
objectpointfinder/: CMakeLists.txt  hdk_objectpoint_finder.hpp  package.xml
objectpointfinder/include/hdk/: find_objectpoint_by_orientation.hpp  find_objectpoint_by_orientation_config.hpp  hdk_objectpoint_finder.hpp  hdk_objectpoint_finder_config.hpp
objectpointfinder/src/: DataTypedef.h  find_objectpoint_by_orientation.cpp  hdk_objectpoint_finder_check_function.cpp  hdk_objectpoint_finder_check_service.cpp
objectpointfinder/srv/: srv_find_objectpoint.srv  srv_is_in_travelable_area.srv
path/: 250902path.txt
person_following/: CMakeLists.txt  CMakeLists_bac.txt  EllipseTracker2LS.h  OR_person_following_conf_5.json  package.xml  person_following_multiple_OR.cpp
person_following/2Sensor-ver/: MyCondensation.cpp  MyCondensation.h  MyEllipseNormalEvaluation.h
person_following/PersonFollowing - 0124/: FollowTrackingServe.h  test.txt  繝励Ο繧ｰ繝ｩ繝莉墓ｧ・txt
person_following/PersonFollowing - 0124/aurglib/: aurglibtest.cpp
person_following/PersonFollowing - 0124/aurglib/urglib/: urg.lib  urg_cpp.lib
person_following/person_following/: package.xml
person_following/person_following/src/: EllipseTracker.h  EllipseTracker2LS.h  person_following.cpp  person_following_multiple.cpp  person_following_multiple_OR.cpp
person_following/person_following/src_ocv249/: CVLegacy.cpp  MyCondensation.cpp  MyEllipseNormalEvaluation.cpp  MyEllipseNormalEvaluation.h  person_following copy.cpp  person_following_multiple.cpp
person_following/src/: EllipseTracker2LS.h  EllipseTracker2LS_bac.txt  MyCondensation.cpp  MyCondensation.h  MyEllipseNormalEvaluation.cpp  MyEllipseNormalEvaluation.h  person_following.cpp  person_following_multiple.cpp  person_following_multiple_OR.cpp  person_following_multiple_OR_bac.txt
person_following/src_bac/: Urg_driver.h  person_following_multiple_OR.cpp
person_following_liu/: CMakeLists.txt  package_bac.txt
person_following_liu/2Sensor-ver/: MyEllipseNormalEvaluation.cpp  main.cpp
person_following_liu/PersonFollowing - 0124/: FollowTrackingServe.cpp  MyUrgCapture.cpp  MyUrgCapture.h  main.cpp
person_following_liu/PersonFollowing - 0124/aurglib/: aurglib.h
person_following_liu/PersonFollowing - 0124/aurglib/urglib/: urg_cpp_d.lib  urg_d.lib
person_following_liu/src/: MyEllipseNormalEvaluation_2LS.cpp  MyEllipseNormalEvaluation_2LS.h  Untitled-1.cpp  json11.cpp  person_following.cpp  person_following_multiple_OR.cpp  person_following_simple.cpp
person_following_liu/src_bac/: MyCondensation.h  MyEllipseNormalEvaluation_2LS.cpp  MyEllipseNormalEvaluation_2LS.h  json11.hpp
personfollowing/src/: MyCondensation.cpp
record_traj/scripts/: record_traj.py
rosgpt/: CMakeLists.txt
rosgpt/devel/: .catkin  local_setup.fish  setup.sh
rosgpt/devel/.private/catkin_tools_prebuild/: .catkin  setup.fish
rosgpt/devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
rosgpt/devel/.private/rosgpt/: .rosinstall  local_setup.sh
rosgpt/devel/lib/pkgconfig/: rosgpt.pc
rosgpt/devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig.cmake
rosgpt/devel/share/rosgpt/cmake/: rosgptConfig.cmake
rosgpt/scripts/: 250902.json  rosgpt.py  rosgpt_var1.txt
rosgpt_ws/: readme.md
rosgpt_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.fish  local_setup.sh  local_setup.zsh  setup.bash  setup.fish  setup.sh  setup.zsh
rosgpt_ws/src/scripts/: rosgpt.py
shino_test_liu/: sks_objectpoint_robot_person_forgerman.cpp
tmp/F-formation/: icartmini_sbtp.cpp  sks_objectpoint_robot_person_new.cpp
tmp/catkin_ws_liu_bac/liu_fformation/: package.xml
tmp/catkin_ws_liu_bac/people_detector/: package.xml
tmp/catkin_ws_liu_bac/people_detector/src/: people_detector_lidar.cpp
tmp/catkin_ws_liu_bac/person_following/: CMakeLists.txt
tmp/catkin_ws_liu_bac/person_following/src/: MyCondensation.h  MyEllipseNormalEvaluation_2LS.cpp  MyEllipseNormalEvaluation_2LS.h  person_following_multiple_OR.cpp  person_following_multiple_OR_bac.txt
tmp/catkin_ws_liu_src/node_review/: CMakeLists.txt
tmp/catkin_ws_liu_src/node_review/src/: add_two_ints_client.cpp
tmp/catkin_ws_liu_src/people_detector/: CMakeLists.txt  people_detector_README.md
tmp/catkin_ws_liu_src/person_following/: package.xml
tmp/catkin_ws_liu_src/person_following/src/: EllipseTracker.h  EllipseTracker2LS.h  MyEllipseNormalEvaluation_2LS.cpp  MyEllipseNormalEvaluation_2LS.h  tomoki_memo.txt
tmp/destination_queuque/: nkm_destination_queue.cpp
tmp/person_following/: OR_person_following_conf_5.json  package.xml
(+47 files in other folders)
