<?xml version="1.0"?>
<package format="2">
  <name>person_following</name>
  <version>0.2.0</version>
  <description>
     A person following package updated for ROS Noetic and OpenCV 4.
     This package tracks a person using data from one or more laser scanners.
  </description>
  <maintainer email="k.nakane@cv.ics.saitama-u.ac.jp">k.nakane</maintainer>
  <author>k.nakane</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build Dependencies: コンパイル時に必要なパッケージ -->
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_generation</build_depend>

  <!-- Execution Dependencies: 実行時に必要なパッケージ -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
