<?xml version="1.0"?>
<package format="2">
  <name>person_following</name>
  <version>0.1.0</version>
  <description>

     person_following

  </description>
  <maintainer email="k.nakane@cv.ics.saitama-u.ac.jp">k.nakane</maintainer>
  <author>k.nakane(移植しただけ)</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>gndlib</depend>

</package>
