<?xml version="1.0"?>
<package format="2">
  <name>person_following</name>
  <version>0.1.0</version>
  <description>Person following package updated for OpenCV 4 and ROS Noetic.</description>
  <maintainer email="k.nakane@cv.ics.saitama-u.ac.jp">k.nakane</maintainer>
  <author>k.nakane(移植しただけ)</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  
  <build_depend>cv_bridge</build_depend>
  
  <build_depend>gndlib</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>gndlib</exec_depend>

</package>